# dotfiles

./: default.nix  flake.nix
hosts/hyperion/: audio.nix  boot.nix  configuration.nix  default.nix  display.nix  gaming.nix  greet.nix  locale.nix  network.nix  nixos-configuration.nix  nixpkgs.nix  wireguard.nix  xand.nix
hosts/lemur-pro/: configuration.nix  default.nix  hardware-configuration.nix
hosts/lenovo-legion/: boot.nix  configuration.nix  default.nix  display.nix  hardware-configuration.nix  nixos-configuration.nix  nixpkgs.nix  power.nix
hyperion/: configuration.nix  default.nix
modules/nixos/: alacritty.nix  steam.nix
modules/nixos/graphical/: picom.nix  rofi.nix  xmonad-session.nix  xmonad.hs  xmonadrc.cabal  xmonadrc.nix
modules/origami/: audio.nix  default.nix  greet.nix  users.nix
modules/origami/xmonad/: default.nix  xmonad-wm.cabal
nix/: sources.json  sources.nix
overlays/: default.nix
pkgs/build-support/: get-flake.nix  seconds-since-epoch.nix
pkgs/nixos/: bootstrap.nix  build-os.nix  make-package-set.nix  splice.nix
pkgs/slack/: slack.nix
pkgs/vim/: vimrc.nix
secrets/: default.nix  secrets.nix
secrets/hyperion/: wireguard.privatekey.age
secrets/keys/: public.nix
sw/firefox/: default.nix
sw/git/: default.nix
sw/monado/: default.nix
sw/niv/: default.nix
sw/openssh/: default.nix
sw/picom/: default.nix
sw/rofi/: default.nix
sw/vim/: default.nix
sw/vscodium/: default.nix
sw/xmonad/: default.nix  xmonad-wm.cabal
sw/xmonad/main/: xmonad.hs
users/: create-user.nix  default.nix
