cabal-version: 3.4

name: xmonad-wm
version: 0

build-type: Simple

executable xmonad
  main-is: main/xmonad.hs
  build-depends:
    , base ^>= 4.20
    , containers
    , dbus
    , xmonad-contrib
    , xmonad-extras
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
