cabal-version: 3.4
name: xmonadrc
version: 1.0
build-type: Simple

common common-language
  default-language: Haskell2010
  default-extensions:
    DisambiguateRecordFields
    ImportQualifiedPost
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications

executable xmonad
  import: common-language
  main-is: xmonad.hs
  build-depends:
    , base ^>= 4.20
    , containers
    , data-default
    , dbus
    , xmonad
    , xmonad-contrib
    , xmonad-extras
